[package]
name = "workflow-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workflow-core = { path = "../workflow-core" }
workflow-log = { path = "../workflow-log" }
workflow-wasm = { path = "../workflow-wasm" }

tungstenite = { version = "0.17.3", default-features = false }
tokio-tungstenite = "0.17.2"
tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros'] }
futures-util = { version = "0.3.23", default-features = false, features = ["sink", "std"] }
manual_future = "0.1.1"
async-std = { version = "1.12.0", features = ['attributes'] }
wasm-bindgen = "0.2.79"
thiserror = "1.0.32"
